--- a/style.css
+++ b/style.css
@@ -5,13 +5,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Libre+Bodoni:ital,wght@0,400..700;1,400..700&display=swap");
 
 
-
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-
 :root {
   --nav-container: 0 10%;
   --container: 0 15%;
@@ -31,6 +24,13 @@
   --blue: #224ce0;
   --border: #033d5a3b;
   --border-secondary: #D6E4EB;
+}
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: var(--hel);
 }
 
 html {
