--- a/style.css
+++ b/style.css
@@ -100,6 +100,267 @@ body {
   height: 24px;
 }
 
+
+
+
+/* modal */
+
+body.modal-open {
+  overflow: hidden;
+  height: 100vh;
+}
+
+.modal {
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.5);
+  opacity: 0;
+  visibility: hidden;
+  transition: visibility 0s linear 0.25s, opacity 0.25s 0s, transform 0.25s;
+  z-index: 9999;
+  padding: 50px;
+}
+
+.modal-content {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: white;
+  padding: 4rem;
+  width: 100%;
+  height: 100%;
+  overflow-y: scroll;
+}
+
+.modal-body {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 86px;
+}
+
+.modal-body .right .head {
+  margin-bottom: 40px;
+}
+
+.modal-body .right .head h2 {
+  color: #033D5A;
+  font-family: var(--hel);
+  font-size: 40px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 140%;
+  margin-bottom: 10px;
+}
+
+.modal-body .right .head p {
+  color: #033D5A;
+  font-family: var(--hel);
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 180%;
+}
+
+.modal-body .left,
+.modal-body .right {
+  width: 50%;
+  height: 100%;
+  flex-direction: column;
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+}
+
+.modal-body .left .modal-brain {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 20px;
+}
+
+.modal-body .right form {
+  width: 100%;
+}
+
+.modal-body .right .form-grp {
+  display: flex;
+  justify-content: flex-end;
+  gap: 32px;
+  margin-bottom: 32px;
+}
+
+.modal-body .right .form-grp:last-child {
+  margin-bottom: 0;
+}
+
+.modal-body .right .input-form {
+  display: flex;
+  justify-content: space-between;
+  flex-direction: column;
+  align-items: flex-start;
+  width: 100%;
+}
+
+.modal-body .right .form-grp .form-lebel {
+  color: #033D5A;
+  text-align: center;
+  font-family: var(--hel);
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 180%;
+}
+
+.modal-body .right .form-grp .form-input {
+  border-radius: 8px;
+  border: 1.5px solid #89AFC1;
+  padding: 16px 20px;
+  width: 100%;
+}
+
+.modal-body .right .form-grp .form-input::placeholder {
+  color: #89AFC1;
+  font-family: var(--hel);
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 180%;
+  /* 28.8px */
+}
+
+.modal-body .right .form-grp .form-input:focus {
+  border-color: var(--dark);
+  color: var(--dark);
+}
+
+.close-btn {
+  position: absolute;
+  top: 1rem;
+  right: 1rem;
+  width: 44px;
+  height: 44px;
+  text-align: center;
+  cursor: pointer;
+  background-color: transparent;
+  border: transparent;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 34px;
+  background-image: url('./assets/icon/cross.svg');
+}
+
+.close-btn:hover {
+  background-color: transparent;
+}
+
+.show-modal {
+  opacity: 1;
+  visibility: visible;
+  transform: scale(1.0);
+  transition: visibility 0s linear 0s, opacity 0.25s 0s, transform 0.25s;
+}
+
+
+.show-modal .swiper-zoom-container .body {
+  position: absolute;
+  bottom: 5%;
+  left: 80px;
+}
+
+.show-modal .swiper-zoom-container {
+  position: relative;
+  border-radius: 20px;
+}
+
+.show-modal .swiper-zoom-container::before {
+  border-radius: 20px;
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-image: radial-gradient(transparent, #000000b2);
+  width: 100%;
+  height: 100%;
+}
+
+
+.show-modal .swiper-zoom-container .body {
+  position: absolute;
+  bottom: 5%;
+  left: 80px;
+  width: max-content;
+}
+
+.show-modal .swiper-zoom-container .body h4 {
+  color: #FFF;
+  font-size: 40px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 140%;
+  width: 60%;
+  text-align: left;
+}
+
+.btn-blue .check-icon {
+  background-image: url(./assets/icon/check-circle.svg);
+  transition: 0.5s ease;
+  margin-left: 20px;
+  filter: brightness(0) saturate(100%) invert(100%) sepia(1%) saturate(136%) hue-rotate(62deg) brightness(112%) contrast(100%);
+}
+
+.modal-body input[type="date"]::-webkit-calendar-picker-indicator {
+  color: rgba(0, 0, 0, 0);
+  opacity: 1;
+  display: block;
+  background: url('./assets/icon/calendar.svg') no-repeat;
+  width: 20px;
+  height: 20px;
+  border-width: thin;
+}
+
+.modal-body select {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  background: transparent;
+  background-image: url("./assets/icon/chevron-down.svg");
+  background-repeat: no-repeat;
+  background-position: right center;
+  background-position-x: calc(100% - 20px);
+  position: relative;
+
+  font-family: var(--hel);
+  color: var(--dark);
+  font-size: var(--para);
+}
+
+
+/* carousel */
+.modal-body .swiper {
+  width: 100%;
+  height: 100%;
+}
+
+.modal-body .swiper-slide {
+  overflow: hidden;
+}
+
+.modal-body .swiper-zoom-container>canvas,
+.modal-body .swiper-zoom-container>img,
+.modal-body .swiper-zoom-container>svg {
+  border-radius: 20px;
+  width: 100%;
+  height: 100%;
+  object-fit: fill;
+}
+
 .navbar {
   width: 100vw;
   height: 80px;
@@ -1287,7 +1548,7 @@ body {
 }
 
 .faq .accordionItemContent p {
-  color: #033D5A;
+  color: var(--dark);
   font-family: Helvetica;
   font-size: var(--para-sm);
   font-style: normal;
@@ -1329,6 +1590,7 @@ body {
 
 .faq .open .acc-head {
   margin: 0px;
+  padding: 0;
   background-color: transparent;
   border: 2px solid transparent;
 
@@ -1411,9 +1673,10 @@ body {
   color: #033D5A;
   font-family: var(--hel);
   font-size: var(--para);
-  font-weight: 400;
+  font-weight: 500;
   line-height: 180%;
   margin-bottom: 28px;
+  width: 75%;
 }
 
 .faq .container .right .btn-light-blue {
@@ -1545,6 +1808,8 @@ body {
 
 .footer .container .bottom .right .social-icons {
   width: max-content;
+  gap: 20px;
+  display: inline-flex;
 }
 
 .footer .container .bottom .right .icon {
@@ -1789,6 +2054,16 @@ body {
   .faq .container {
     gap: 120px;
   }
+
+  .show-modal .swiper-zoom-container .body h4 {
+    color: #FFF;
+    font-size: 30px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 140%;
+    width: 60%;
+    text-align: left;
+  }
 }
 
 @media screen and (max-width: 1024px) {
@@ -1833,6 +2108,15 @@ body {
   .show-modal .swiper-zoom-container {
     display: flex;
     justify-content: flex-start;
+    position: relative;
+    width: 500px;
+  }
+
+  .show-modal .swiper-zoom-container .body {
+    position: absolute;
+    bottom: 5%;
+    left: 50px;
+    width: max-content;
   }
 
   .hero .right .rightImage {
@@ -2091,6 +2375,12 @@ body {
     --section: 60px;
   }
 
+  .show-modal .swiper-zoom-container .body h4 {
+    color: #FFF;
+    font-size: 30px;
+    width: 60%;
+  }
+
   .navbar .container .col-6 {
     width: 25%;
     display: flex;
@@ -2281,6 +2571,13 @@ body {
     --section: 60px;
   }
 
+  .show-modal .swiper-zoom-container {
+    display: flex;
+    justify-content: flex-start;
+    position: relative;
+    width: 100%;
+  }
+
   #location .details {
     margin-bottom: 10px;
   }
@@ -2439,6 +2736,19 @@ body {
 
   .navbar .container .col-6 .location {
     width: 100%;
+  }
+
+  .show-modal .swiper-zoom-container {
+    display: flex;
+    justify-content: flex-start;
+    position: relative;
+    width: 100%;
+  }
+
+  .show-modal .swiper-zoom-container .body h4 {
+    color: #FFF;
+    font-size: 20px;
+    width: 60%;
   }
 
   .reviews .h-Bar ul li .quote-icon {
@@ -2633,219 +2943,17 @@ body {
     gap: 40px;
     flex-direction: column-reverse;
   }
-}
 
+  .show-modal .swiper-zoom-container .body {
+    position: absolute;
+    bottom: 8%;
+    left: 30px;
+    width: max-content;
+  }
 
-/* modal */
-
-body.modal-open {
-  overflow: hidden;
-  height: 100vh;
-}
-
-.modal {
-  position: fixed;
-  left: 0;
-  top: 0;
-  width: 100vw;
-  height: 100vh;
-  background-color: rgba(0, 0, 0, 0.5);
-  opacity: 0;
-  visibility: hidden;
-  transition: visibility 0s linear 0.25s, opacity 0.25s 0s, transform 0.25s;
-  z-index: 9999;
-  padding: 50px;
-}
-
-.modal-content {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  background-color: white;
-  padding: 4rem;
-  width: 100%;
-  height: 100%;
-  overflow-y: scroll;
-}
-
-.modal-body {
-  width: 100%;
-  height: 100%;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  gap: 86px;
-}
-
-.modal-body .right .head {
-  margin-bottom: 40px;
-}
-
-.modal-body .right .head h2 {
-  color: #033D5A;
-  font-family: var(--hel);
-  font-size: 40px;
-  font-style: normal;
-  font-weight: 700;
-  line-height: 140%;
-  margin-bottom: 10px;
-}
-
-.modal-body .right .head p {
-  color: #033D5A;
-  font-family: var(--hel);
-  font-size: 16px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 180%;
-}
-
-.modal-body .left,
-.modal-body .right {
-  width: 50%;
-  height: 100%;
-  flex-direction: column;
-  display: flex;
-  justify-content: center;
-  align-items: flex-start;
-}
-
-.modal-body .left .modal-brain {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  border-radius: 20px;
-}
-
-.modal-body .right form {
-  width: 100%;
-}
-
-.modal-body .right .form-grp {
-  display: flex;
-  justify-content: flex-end;
-  gap: 32px;
-  margin-bottom: 32px;
-}
-
-.modal-body .right .form-grp:last-child {
-  margin-bottom: 0;
-}
-
-.modal-body .right .input-form {
-  display: flex;
-  justify-content: space-between;
-  flex-direction: column;
-  align-items: flex-start;
-  width: 100%;
-}
-
-.modal-body .right .form-grp .form-lebel {
-  color: #033D5A;
-  text-align: center;
-  font-family: var(--hel);
-  font-size: 16px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 180%;
-}
-
-.modal-body .right .form-grp .form-input {
-  border-radius: 8px;
-  border: 1.5px solid #89AFC1;
-  padding: 16px 20px;
-  width: 100%;
-}
-
-.modal-body .right .form-grp .form-input::placeholder {
-  color: #89AFC1;
-  font-family: var(--hel);
-  font-size: 16px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 180%;
-  /* 28.8px */
-}
-
-.modal-body .right .form-grp .form-input:focus {
-  border-color: var(--dark);
-  color: var(--dark);
-}
-
-.close-btn {
-  position: absolute;
-  top: 1rem;
-  right: 1rem;
-  width: 44px;
-  height: 44px;
-  text-align: center;
-  cursor: pointer;
-  background-color: transparent;
-  border: transparent;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-size: 34px;
-  background-image: url('./assets/icon/cross.svg');
-}
-
-.close-btn:hover {
-  background-color: transparent;
-}
-
-.show-modal {
-  opacity: 1;
-  visibility: visible;
-  transform: scale(1.0);
-  transition: visibility 0s linear 0s, opacity 0.25s 0s, transform 0.25s;
-}
-
-.btn-blue .check-icon {
-  background-image: url(./assets/icon/check-circle.svg);
-  transition: 0.5s ease;
-  margin-left: 20px;
-  filter: brightness(0) saturate(100%) invert(100%) sepia(1%) saturate(136%) hue-rotate(62deg) brightness(112%) contrast(100%);
-}
-
-.modal-body input[type="date"]::-webkit-calendar-picker-indicator {
-  color: rgba(0, 0, 0, 0);
-  opacity: 1;
-  display: block;
-  background: url('./assets/icon/calendar.svg') no-repeat;
-  width: 20px;
-  height: 20px;
-  border-width: thin;
-}
-
-.modal-body select {
-  -webkit-appearance: none;
-  -moz-appearance: none;
-  background: transparent;
-  background-image: url("./assets/icon/chevron-down.svg");
-  background-repeat: no-repeat;
-  background-position: right center;
-  background-position-x: calc(100% - 20px);
-  position: relative;
-
-  font-family: var(--hel);
-  color: var(--dark);
-  font-size: var(--para);
-}
-
-
-/* carousel */
-.modal-body .swiper {
-  width: 100%;
-  height: 100%;
-}
-
-.modal-body .swiper-slide {
-  overflow: hidden;
-}
-
-.modal-body .swiper-zoom-container>canvas,
-.modal-body .swiper-zoom-container>img,
-.modal-body .swiper-zoom-container>svg {
-  border-radius: 20px;
+  .show-modal .swiper-zoom-container .body h4 {
+    color: #FFF;
+    font-size: 16px;
+    width: 60%;
+  }
 }
